src/tests/snapshots/niri__tests__window_opening__check_target_size@dwP0.25-wfsBN.snap
---
source: src/tests/window_opening.rs
description: "default column width: P0.25\nwant fullscreen: BN"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen, Activated]

unfullscreen configure:
size: 300 × 688, bounds: 1248 × 688, states: [Activated]
