src/tests/snapshots/niri__tests__window_opening__check_target_size@dwP0.25-wfsBU-t.snap
---
source: src/tests/window_opening.rs
description: "default column width: P0.25\nwant fullscreen: BU\ntabbed"
expression: snapshot
---
initial configure:
size: 291 × 688, bounds: 1239 × 688, states: []

post-map configures:
size: 291 × 688, bounds: 1239 × 688, states: [Activated]
